# coreBioloid

./: CMakeLists.txt  ChangeLog  README.md  main.cpp
bioloid/: ActionController.cpp  ActionController.h  BioFixedActCtrl.cpp  BioFixedActCtrl.h  BioloidCtrl.cpp  BioloidCtrl.h  BioloidFixedActionData.cpp  BioloidFixedActionData.h  BioloidJointsData.cpp  BioloidJointsData.h  BioloidJointsEffector.cpp  BioloidJointsEffector.h  BioloidPerception.cpp  BioloidPerception.h  CMakeLists.txt  FixedPoseString.h  FixedTaskString.h  HingeJointEffector.cpp  HingeJointEffector.h  IntfBioloid.cpp  IntfBioloid.h
rsg/agent/nao/: nao.rsg  naoarm.rsg  naoleg.rsg  naoneckhead.rsg
rsg/agent/naobak1/: naoarm.rsg  naoleg.rsg  naoneckhead.rsg
