SET(SRCS 
ActionController.h
ActionController.cpp
BioFixedActCtrl.h
BioFixedActCtrl.cpp
BioloidCtrl.h
BioloidCtrl.cpp
BioloidFixedActionData.h
BioloidFixedActionData.cpp
BioloidJointsData.h
BioloidJointsData.cpp
BioloidJointsEffector.h
BioloidJointsEffector.cpp
BioloidPerception.h
BioloidPerception.cpp
FixedTaskString.h
FixedPoseString.h
HingeJointEffector.h
HingeJointEffector.cpp
IntfBioloid.h
IntfBioloid.cpp
)
ADD_LIBRARY( bioloid STATIC ${SRCS}  )
